--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
     "react-redux": "^7.2.6",
